# Python-web-converter

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
src/: main.py  req.txt
src/alembic/: env.py
src/alembic/versions/: 2024_03_17_2248-e1dd109ff72c_files_table.py  2024_03_18_0820-2c4520d3eb90_conversion_and_his_statuses.py  2024_03_18_1444-a6ae5e3ca175_add_size_column_to_files.py
src/api_v1/: __init__.py
src/api_v1/doc2pdf/: backgroud_tasks.py  dependencies.py  repo.py  router.py  schemas.py  service.py
src/converter/: converter.py
src/converters/: converter.py  doc2pdf.py
src/db/: __init__.py  db.py
src/models/: models.py
src/utils/: repository.py
